--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/git/GitHub/SemanticAnalyzer/mysql-connector-java-5.1.35-bin.jar"/>
+	<classpathentry kind="lib" path="C:/git/GitHub/SemanticAnalyzer/jsoup-1.8.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
